--- a/database/channel_settings.json
+++ b/database/channel_settings.json
@@ -10,5 +10,11 @@
     },
     "earthquake": {
         "613747262291443742": 973156855176134656
+    },
+    "apex_crafting": {
+        
+    },
+    "apex_map" : {
+        
     }
 }
