--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 *.pyc
 token.json
+credentials.json
 database/token.json
 database/cache.json
 database/setting.json
 logs
 twitch_chatbot/database/
+database/google_token.json
