--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ apscheduler = "^3.10.4"
 fastapi = "^0.110.1"
 uvicorn = "^0.29.0"
 yt-dlp = "^2024.3.10"
+matplotlib = "^3.8.4"
 
 
 [build-system]
