--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,14 @@ fastapi = "^0.110.1"
 uvicorn = "^0.29.0"
 yt-dlp = "^2024.3.10"
 matplotlib = "^3.8.4"
+google-api-python-client = "^2.125.0"
+google-auth-httplib2 = "^0.2.0"
+google-auth-oauthlib = "^1.2.0"
+google-generativeai = "^0.5.0"
+mcrcon = "^0.7.0"
+twitchapi = "^4.2.0"
+flask = "^3.0.3"
+pymongo = "^4.6.3"
 
 
 [build-system]
