--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,6 @@ pandas = "^2.2.1"
 psutil = "^5.9.8"
 beautifulsoup4 = "^4.12.3"
 mysql-connector-python = "^8.3.0"
-genshin = "^1.6.2"
 gitpython = "^3.1.43"
 apscheduler = "^3.10.4"
 fastapi = "^0.110.1"
@@ -29,6 +28,7 @@ mcrcon = "^0.7.0"
 twitchapi = "^4.2.0"
 flask = "^3.0.3"
 pymongo = "^4.6.3"
+genshin = "1.6.2"
 
 
 [tool.poetry.group.dev.dependencies]
