--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "xingyubot"
-version = "0.2.1"
+version = "0.2.2"
 description = "一個集結許多功能的DiscordBot"
 authors = ["威立 <66502303+willy1236@users.noreply.github.com>"]
 readme = "README.md"
@@ -28,12 +28,13 @@ mcrcon = "^0.7.0"
 twitchapi = "^4.2.0"
 flask = "^3.0.3"
 pymongo = "^4.6.3"
-genshin = "1.6.2"
+genshin = "^1.7.1"
 
 
 [tool.poetry.group.dev.dependencies]
 faker = "^24.9.0"
 spotify-dl = "^8.9.0"
+genshin = {extras = ["cookies", "rsa"], version = "^1.7.1"}
 
 [build-system]
 requires = ["poetry-core"]
