--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ mcrcon = "^0.7.0"
 twitchapi = "^4.2.0"
 pymongo = "^4.6.3"
 genshin = "^1.7.1"
+httpx = "^0.27.0"
 
 
 [tool.poetry.group.dev.dependencies]
