--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "xingyubot"
-version = "0.2.3"
+version = "0.2.4"
 description = "一個集結許多功能的DiscordBot"
 authors = ["威立 <66502303+willy1236@users.noreply.github.com>"]
 readme = "README.md"
@@ -29,6 +29,8 @@ twitchapi = "^4.2.0"
 pymongo = "^4.6.3"
 genshin = "^1.7.1"
 httpx = "^0.27.0"
+selenium = "^4.23.1"
+sqlmodel = "^0.0.21"
 
 
 [tool.poetry.group.dev.dependencies]
