--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "xingyubot"
-version = "0.2.5"
+version = "0.2.6"
 description = "一個集結許多功能的DiscordBot"
 authors = ["威立 <66502303+willy1236@users.noreply.github.com>"]
 readme = "README.md"
@@ -8,30 +8,29 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 py-cord = {extras = ["voice"], version = "^2.5.0"}
-requests = "^2.31.0"
+requests = "^2.32.3"
 feedparser = "^6.0.11"
-pandas = "^2.2.1"
-psutil = "^5.9.8"
+pandas = "^2.2.3"
+psutil = "^6.1.0"
 beautifulsoup4 = "^4.12.3"
-mysql-connector-python = "^8.3.0"
+mysql-connector-python = {extras = ["^9.0.0"], version = "^9.1.0"}
 gitpython = "^3.1.43"
 apscheduler = "^3.10.4"
-fastapi = "^0.110.1"
-uvicorn = "^0.29.0"
-yt-dlp = "^2024.3.10"
-matplotlib = "^3.8.4"
-google-api-python-client = "^2.125.0"
+fastapi = "^0.115.4"
+uvicorn = "^0.32.0"
+yt-dlp = "^2024.11.4"
+matplotlib = "^3.9.2"
+google-api-python-client = "^2.151.0"
 google-auth-httplib2 = "^0.2.0"
-google-auth-oauthlib = "^1.2.0"
-google-generativeai = "^0.5.0"
+google-auth-oauthlib = "^1.2.1"
+google-generativeai = "^0.8.3"
 mcrcon = "^0.7.0"
-twitchapi = "^4.2.0"
-pymongo = "^4.6.3"
-genshin = "^1.7.1"
-httpx = "^0.27.0"
-selenium = "^4.23.1"
-sqlmodel = "^0.0.21"
-line-bot-sdk = "^3.13.0"
+twitchapi = "^4.3.1"
+pymongo = "^4.10.1"
+genshin = "^1.7.2"
+selenium = "^4.26.1"
+sqlmodel = "^0.0.22"
+line-bot-sdk = "^3.14.0"
 
 
 [tool.poetry.group.dev.dependencies]
