--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ feedparser = "^6.0.11"
 pandas = "^2.2.3"
 psutil = "^6.1.0"
 beautifulsoup4 = "^4.12.3"
-mysql-connector-python = {extras = ["^9.0.0"], version = "^9.1.0"}
+mysql-connector-python = "^9.1.0"
 gitpython = "^3.1.43"
 apscheduler = "^3.10.4"
 fastapi = "^0.115.4"
