--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ feedparser = "^6.0.11"
 pandas = "^2.2.3"
 psutil = "^6.1.0"
 beautifulsoup4 = "^4.12.3"
-mysql-connector-python = "^9.1.0"
+mysql-connector-python = "9.0.0"
 gitpython = "^3.1.43"
 apscheduler = "^3.10.4"
 fastapi = "^0.115.4"
@@ -30,7 +30,7 @@ pymongo = "^4.10.1"
 genshin = "^1.7.2"
 selenium = "^4.26.1"
 sqlmodel = "^0.0.22"
-line-bot-sdk = "^3.14.0"
+line-bot-sdk = "3.13.0"
 
 
 [tool.poetry.group.dev.dependencies]
