--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ selenium = "^4.26.1"
 sqlmodel = "^0.0.22"
 line-bot-sdk = "3.13.0"
 mcstatus = "^11.1.1"
+vosk = "^0.3.45"
 
 
 [tool.poetry.group.dev.dependencies]
