--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ line-bot-sdk = "3.13.0"
 mcstatus = "^11.1.1"
 vosk = "^0.3.45"
 mwrogue = "^0.1.5"
+psycopg2 = "^2.9.10"
 
 
 [tool.poetry.group.dev.dependencies]
