--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "xingyubot"
-version = "0.2.8"
+version = "0.2.9"
 description = "一個集結許多功能的DiscordBot"
 authors = ["威立 <66502303+willy1236@users.noreply.github.com>"]
 readme = "README.md"
@@ -13,7 +13,7 @@ feedparser = "^6.0.11"
 pandas = "^2.2.3"
 psutil = "^6.1.0"
 beautifulsoup4 = "^4.12.3"
-mysql-connector-python = "9.0.0"
+mysql-connector-python = "^9.0.0"
 gitpython = "^3.1.43"
 apscheduler = "^3.10.4"
 fastapi = "^0.115.4"
