--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["威立 <66502303+willy1236@users.noreply.github.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.11, <3.13"
+python = ">=3.12, <3.13"
 py-cord = {extras = ["voice"], version = "^2.5.0"}
 requests = "^2.32.3"
 feedparser = "^6.0.11"
@@ -35,6 +35,7 @@ vosk = "^0.3.45"
 mwrogue = "^0.1.5"
 psycopg2 = "^2.9.10"
 tweepy = {extras = ["async"], version = "^4.15.0"}
+pydantic-ai-slim = {extras = ["vertexai"], version = "^0.1.11"}
 
 
 [tool.poetry.group.dev.dependencies]
