--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ vosk = "^0.3.45"
 mwrogue = "^0.1.5"
 psycopg2 = "^2.9.10"
 tweepy = {extras = ["async"], version = "^4.15.0"}
-pydantic-ai-slim = {extras = ["vertexai"], version = "^0.1.11"}
+pydantic-ai-slim = {extras = ["mcp", "vertexai"], version = "^0.2.10"}
 
 
 [tool.poetry.group.dev.dependencies]
