Implement code changes to enhance functionality and improve performance

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,6 @@ genshin = {extras = ["cookies", "rsa"], version = "^1.7.1"}
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff.format]
+indent-style = "tab"
