--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "xingyubot"
-version = "0.2.11"
+version = "0.2.12"
 description = "一個集結許多功能的DiscordBot"
 authors = ["威立 <66502303+willy1236@users.noreply.github.com>"]
 readme = "README.md"
@@ -27,7 +27,7 @@ twitchapi = "^4.3.1"
 pymongo = "^4.10.1"
 genshin = "^1.7.2"
 sqlmodel = "^0.0.24"
-line-bot-sdk = "3.13.0"
+line-bot-sdk = "^3.17.1"
 mcstatus = "^11.1.1"
 vosk = "^0.3.45"
 mwrogue = "^0.1.5"
