Refactor bot_website.py for improved readability and consistency; enhance OAuth2Base class with detailed docstrings; tidy up McssAPI class formatting and structure.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,4 +45,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.ruff.format]
-indent-style = "tab"
+indent-style = "space"
