--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "xingyubot"
-version = "0.2.13"
+version = "0.2.14"
 description = "一個集結許多功能的DiscordBot"
 authors = ["威立 <66502303+willy1236@users.noreply.github.com>"]
 readme = "README.md"
@@ -33,7 +33,7 @@ vosk = "^0.3.45"
 mwrogue = "^0.1.5"
 psycopg2 = "^2.9.10"
 tweepy = {extras = ["async"], version = "^4.15.0"}
-pydantic-ai-slim = {extras = ["mcp", "vertexai"], version = "^0.2.10"}
+pydantic-ai-slim = {extras = ["duckduckgo", "mcp", "tavily", "vertexai"], version = "^0.3.2"}
 
 
 [tool.poetry.group.dev.dependencies]
