--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,3 +34,10 @@ dependencies = [
     "vosk>=0.3.45",
     "yt-dlp>=2025.7.21",
 ]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pytest-cov>=6.2.1",
+    "pytest-mock>=3.14.1",
+]
