fix: 修正package的設定錯誤

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "psutil>=7.0.0",
     "psycopg2>=2.9.10",
     "py-cord[voice]>=2.6.1",
-    "pydantic-ai-slim[duckduckgo,mcp,tavily,vertexai]>=0.6.2",
+    "pydantic-ai-slim[duckduckgo,google,mcp,tavily,vertexai]>=0.6.2",
     "pymongo>=4.14.0",
     "python-nmap>=0.7.1",
     "requests>=2.32.4",
