Refactor Google API integration and add URL validation features
- Replaced instances of GoogleCloud with XingyuGoogleCloud in command.py for file permission management.
- Updated system_community.py to utilize google_api for YouTube channel operations instead of yt_api.
- Modified task.py to use google_api for fetching video data.
- Adjusted bot_website.py to integrate google_api for YouTube push notifications.
- Refactored dataExtractor to rename YoutubeAPI to GoogleAPI and added XingyuGoogleCloud for Google Cloud operations.
- Introduced a new VirustotalAPI class for URL threat analysis and added webUtility functions for URL validation and WHOIS lookups.
- Enhanced SQLTokensSystem to support dynamic Google credentials retrieval based on scopes.
- Updated instance.py to reflect changes in API references.
- Added new dependencies for python-whois and google-cloud-webrisk in the project.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "gitpython>=3.1.45",
     "google-api-python-client>=2.178.0",
     "google-auth-oauthlib>=1.2.2",
+    "google-cloud-webrisk>=1.18.1",
     "google-generativeai>=0.8.5",
     "line-bot-sdk>=3.18.0",
     "matplotlib>=3.10.5",
@@ -26,6 +27,7 @@ dependencies = [
     "pydantic-ai-slim[duckduckgo,google,mcp,tavily,vertexai]>=0.6.2",
     "pymongo>=4.14.0",
     "python-nmap>=0.7.1",
+    "python-whois>=0.9.5",
     "requests>=2.32.4",
     "sqlmodel>=0.0.24",
     "tweepy[async]>=4.16.0",
