feat: 增加 VIP 系統功能，包括 VIP 申請、審核及相關資料庫操作

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "pandas>=2.3.1",
     "psutil>=7.0.0",
     "psycopg2>=2.9.10",
-    "py-cord[voice]>=2.6.1",
+    "py-cord[voice]==2.7.0rc1",
     "pydantic-ai-slim[duckduckgo,google,mcp,tavily,vertexai]>=0.6.2",
     "pymongo>=4.14.0",
     "python-nmap>=0.7.1",
