--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "py-cord[voice]==2.7.0rc1",
     "pydantic-ai-slim[duckduckgo,google,mcp,tavily,vertexai]>=0.6.2",
     "pymongo>=4.14.0",
+    "python-jose>=3.5.0",
     "python-nmap>=0.7.1",
     "python-whois>=0.9.5",
     "requests>=2.32.4",
