--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ twitch_token.json
 user_token.json
 member_names.json
 database/google_client_credentials.json
+database/server.crt
+database/server.csr
+database/server.key
