--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "xingyubot"
-version = "0.2.15"
+version = "0.2.16"
 description = "一個集結許多功能的DiscordBot"
 readme = "README.md"
 requires-python = "~=3.12.0"
@@ -23,7 +23,7 @@ dependencies = [
     "pandas>=2.3.1",
     "psutil>=7.0.0",
     "psycopg2>=2.9.10",
-    "py-cord[speed,voice]==2.7.0rc1",
+    "py-cord[voice]==2.7.0rc2",
     "pydantic-ai-slim[duckduckgo,google,mcp,tavily,vertexai]>=0.6.2",
     "pymongo>=4.14.0",
     "python-jose>=3.5.0",
