--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = "~=3.12.0"
 dependencies = [
     "apscheduler>=3.11.0",
+    "authlib>=1.6.5",
     "beautifulsoup4>=4.13.4",
     "fastapi>=0.116.1",
     "feedparser>=6.0.11",
