feat: 更新python環境至3.13

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "xingyubot"
-version = "0.2.16"
+version = "1.0.0"
 description = "一個集結許多功能的DiscordBot"
 readme = "README.md"
-requires-python = "~=3.12.0"
+requires-python = "~=3.13.0"
 dependencies = [
     "apscheduler>=3.11.0",
     "authlib>=1.6.5",
@@ -24,7 +24,7 @@ dependencies = [
     "pandas>=2.3.1",
     "psutil>=7.0.0",
     "psycopg2>=2.9.10",
-    "py-cord[voice]==2.7.0rc2",
+    "py-cord[voice]>=2.7.0",
     "pydantic-ai-slim[duckduckgo,google,mcp,tavily,vertexai]>=0.6.2",
     "pymongo>=4.14.0",
     "python-jose>=3.5.0",
