--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "xingyubot"
-version = "1.0.0"
+version = "1.1.0"
 description = "一個集結許多功能的DiscordBot"
 readme = "README.md"
 requires-python = "~=3.13.0"
@@ -32,6 +32,7 @@ dependencies = [
     "python-whois>=0.9.5",
     "requests>=2.32.4",
     "sqlmodel>=0.0.24",
+    "truststore>=0.10.4",
     "tweepy[async]>=4.16.0",
     "twitchapi>=4.5.0",
     "uvicorn>=0.35.0",
